# Symbolic-SCCs

./: .gitignore  README.md
NewPintFiles/: BIOMD0000000562.an  BIOMD0000000592.an  BIOMD0000000593.an  MODEL1305240000.an  MODEL1504170000.an  MODEL1504170001.an  MODEL1504170002.an  MODEL1504170003.an  MODEL1506260000.an  MODEL1506260002.an  MODEL1606020000.an  MODEL1607310000.an  MODEL1610060000.an  MODEL1610060001.an  MODEL1610240000.an  MODEL1611180000.an  MODEL1611230001.an  MODEL1903260001.an  MODEL1903260003.an  MODEL2002170001.an  MODEL2002190001.an  MODEL2004040001.an  MODEL2007200001.an  MODEL2101150001.an  MODEL2304070002.an  arellano_rootstem.an  calzone_cellfate.an  dahlhaus_neuroplastoma.an  davidich_yeast.an  dinwoodie_life.an  faure_cellcycle.an  grieco_mapk.an  irons_yeast.an  klamt_tcr.an  krumsiek_myeloid.an  multivalued.an  n12c5.an  n3s1c1a.an  n3s1c1b.an  n5s3.an  (+13 more)
PintFiles/: [v101]__[r158]__[T-CELL-RECEPTOR-SIGNALING]__[cellcollective].an  [v102]__[r157]__[INTERFERON-1]__[covid-uni-lu].an  [v104]__[r166]__[ETC]__[covid-uni-lu].an  [v104]__[r226]__[EGFR-ERBB-SIGNALING]__[cellcollective].an  [v10]__[r14]__[AP-1-ELSE-0-WT]__[ginsim].an  [v10]__[r27]__[FISSION-YEAST-DAVIDICH-2008]__[ginsim].an  (+117 more)
lockstep_algorithm/: Results.xlsx  bdd.txt  (+7 more)
lockstep_algorithm/src/: CMakeLists.txt  benchmark.cpp  benchmark.h  bscc.cpp  bscc.h  deadlock.cpp  deadlock.h  graph_creation.cpp  interface.h  lockstep.cpp  lockstep.h  main.cpp  parse.cpp  parse.h  petriTranslation.cpp  petriTranslation.h  print.cpp  reachability.cpp  reachability.h  scc.cpp  scc.h  tgr.cpp  tgr.h
(+7 files in other folders)
